# voxelworld

./: Cargo.toml  build-release-windows.bat  build-release.sh
assets/: block_drops.impfile  block_menu.impfile  font_path.impfile  item_aliases.impfile  recipes.impfile
src/: game.rs  main.rs  voxel.rs
src/game/: assets.rs  crafting.rs  gameloop.rs  physics.rs  player.rs  settings.rs  update.rs
src/gfx/: buildchunk.rs
src/gfx/buildchunk/addvertices/: nonvoxel.rs
src/gui/: settings_screen.rs
src/voxel/: flags.rs  is_valid.rs
src/voxel/world/: skyblock_world.rs
src/voxel/world/block_update/: rand_block_update.rs  simulations.rs
src/voxel/world/default_world/: plants.rs
